# ZipNavigator

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-tests.yml
examples/: example_iterator.py  example_quickstart.py  example_resume.py
src/: __init__.py  zip_navigator.py  zipnavigator.py
src/zipnavigator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_cat_and_info.py  test_cd_errors.py  test_initialize_with_trailing_slash_base.py  test_iterator_basic.py  test_iterator_errors_and_preflight.py  test_iterator_seed_and_state.py  test_navigation.py  test_public_api_edges.py  test_zip_navigator.py  test_zip_navigator_iter_medium.py
