[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zipnavigator"
version = "0.1.0"
description = "Navigazione ed estrazione sicura di archivi ZIP con supporto per iterazioni batch e resume."
authors = [
    { name = "Antonio Brau", email = "antonio@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = []

[project.urls]
Homepage = "https://github.com/antoniobrau/zipnavigator"
Repository = "https://github.com/antoniobrau/zipnavigator"
Issues = "https://github.com/antoniobrau/zipnavigator/issues"
